2007-07-26 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-account-chooser.c:
	* libempathy-gtk/empathy-new-chatroom-dialog.c:
	* libempathy-gtk/empathy-account-chooser.h:
	* libempathy-gtk/empathy-contact-dialogs.c:
	* libempathy-gtk/empathy-chatrooms-window.c:
	* libempathy-gtk/empathy-contact-widget.c:
	* libempathy-gtk/empathy-contact-widget.h:
	* libempathy-gtk/empathy-log-window.c:
	* doc/*: Do not show salut accounts in the add contact dialog. Rework
	a bit EmpathyContactWidget. Fixes bug #459100
	(Guillaume Desmottes, Xavier Claessens).

2007-07-26 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-accounts-dialog.c: add contact frame is not
	hidden after cancelling. Fixes bug #458997 (Frederic Peters).

2007-07-26 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/empathy-idle.c: Fix problems when NM is not running. Fixes
	bug #460419.

	* doc/*: Updated documentation.

2007-07-25 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/empathy-filter.c: Adding more debug output.

2007-07-25 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/empathy-tp-contact-list.c: Add a check to be sure the
	new channel is valid in the NewChannel cb. Fixes bug #451564.

2007-07-20 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/Makefile.am:
	* libempathy/empathy-tp-roomlist.h:
	* libempathy/empathy-tp-roomlist.c:
	* libempathy-gtk/empathy-chatrooms-window.c:
	* libempathy-gtk/empathy-new-chatroom-dialog.c: Initial room list
	support. It does not works yet.

	* libempathy-gtk/empathy-account-widget-generic.c: Add support for all
	types of integer and float. Fixes bug #457740 (Jamey Hicks).

	* libempathy/empathy-tp-chat.c:
	* libempathy-gtk/empathy-chat.c: If there is an error sending a message,
	show an error message to the user.

	* libempathy-gtk/empathy-accounts-dialog.c: Fix a leak, profile should
	be unrefed after mc_account_get_profile.

	* libempathy/empathy-utils.c:
	* libempathy/empathy-utils.h: